--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV Design usuing Html & Css</title>
+    <title>CV Html & Css</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
@@ -14,7 +14,7 @@
                 </div>
             </div>
             <div class="profiletext">
-                <h3>SAFIATOU<br>GUEYE<br><span>Designer</span></h3>
+                <h3>SAFIATOU<br>GUEYE<br><span>COMMUNICATION</span></h3>
             </div>
         </div>
         <div class="contentBox">
@@ -38,7 +38,7 @@
                 <span class="text">linguere, dakar, senegal</span>
             </li>
         </ul> 
-        <h3>Educatin</h3> 
+        <h3>Education</h3> 
         <ul class="education">
             <li>
                 <h5>2022 - 2023</h5>
@@ -58,7 +58,6 @@
  </ul>
         <h3>Language</h3>
 </li>
-       <li>
             <span class="text">Wolof</span>
             <span class="percent">
                 <div style="width: 90%;"></div>
@@ -85,15 +84,38 @@
             <li><span class="icon"><ion-icon name="book-outline"></ion-icon></span>Reading</li> 
             <li><span class="icon"><ion-icon name="cafe-outline"></ion-icon></span>Cooking</li>
              </ul>
-
              </div>
         
     <div class="rightSide"></div>
+    <div class="about">
+        <h3>Profile</h3>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Saepe aliquid ratione, nisi similique quia at et quidem autem numquam ut, sed harum, dolorem nobis magni voluptatibus veniam unde? Sapiente, corporis?</p>
 </div>
+<div class="about Skill">
+    <h3>Professional Skill</h3>
+    <div class="box">
+        <h4><Html></h4>
+            <span class="percent">
+                <div style="width: 50%;"></div>
+            </span>
+    </div>
+        <div class="box">
+            <h4><Css></h4>
+                <span class="percent">
+                    <div style="width: 50%;"></div>
+                </span>
+        </div>
+            <div class="box">
+                <h4><Photoshop></h4>
+                    <span class="percent">
+                        <div style="width: 48%;"></div>
+                    </span>
+            </div>
+    
+
+        </div>
+    </div>
 </div>
-</div>
-    <div class="about Skills">
-        <h3>Professional Skills</h3>
         </div>
     </div>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
